src/objects/Project_Metric_Actual__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <description>PSA-CLD-USNONE - Comments.</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>PSA-CLD-USNONE - Date.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Denominator__c</fullName>
        <label>Denominator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>PSA-CLD-USNONE - External ID.  Unique.  Used to identify the ID of this record in its source system (for data migration).</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID.  Unique.  Used to identify the ID of this record in its source system (for data migration).</inlineHelpText>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numerator__c</fullName>
        <label>Numerator</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSA_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - PSA Metric.</description>
        <label>PSA Metric</label>
        <referenceTo>PSA_Metric__c</referenceTo>
        <relationshipLabel>Project Metric Actuals</relationshipLabel>
        <relationshipName>Project_Metric_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Metric__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>PSA-CLD-USNONE - Project Metric.</description>
        <label>Project Metric</label>
        <referenceTo>Project_Metric__c</referenceTo>
        <relationshipLabel>Project Metric Actuals</relationshipLabel>
        <relationshipName>Project_Metric_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA-CLD-USNONE - Project.</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Metric Actuals</relationshipLabel>
        <relationshipName>Project_Metric_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity for metric actual period</description>
        <inlineHelpText>Quantity for metric actual period</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Project Metric Actual</label>
    <nameField>
        <displayFormat>PMA-{00000000}</displayFormat>
        <label>Project Metric Actual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Metric Actuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PRM_VR02_PSA_MetricRequired</fullName>
        <active>true</active>
        <description>PSA-USNONE-VR-PSAMetricRequired</description>
        <errorConditionFormula>ISBLANK(  Project_Metric__r.PSA_Metric__c )</errorConditionFormula>
        <errorMessage>PSA Metric cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRM_VR03_PSA_ProjectMetricRequired</fullName>
        <active>true</active>
        <description>PSA-USNONE-VR-ProjectMetricRequired</description>
        <errorConditionFormula>ISBLANK(Project_Metric__c)</errorConditionFormula>
        <errorDisplayField>Project_Metric__c</errorDisplayField>
        <errorMessage>Project Metric  cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRM_VR04_PSA_ProjectMismatch</fullName>
        <active>true</active>
        <description>PSA-USNONE-VR- The Metric’s Project must equal the Project lookup</description>
        <errorConditionFormula>Project_Metric__r.Project__c != Project__c</errorConditionFormula>
        <errorMessage>The Metric’s Project must equal the Project lookup</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRM_VR04_PSA_ProjectRequired</fullName>
        <active>true</active>
        <description>PSA-USNONE-VR-Project cannot be blank</description>
        <errorConditionFormula>ISBLANK(Project__c)</errorConditionFormula>
        <errorDisplayField>Project__c</errorDisplayField>
        <errorMessage>Project cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRM_VR05_PSA_PSAMetricMismatch</fullName>
        <active>true</active>
        <description>PSA-USNONE-VR- The Project Metric’s Metric Lookup must equal the Metric loookup</description>
        <errorConditionFormula>Project_Metric__r.PSA_Metric__c  !=  PSA_Metric__c</errorConditionFormula>
        <errorMessage>The Project Metric’s PSA Metric Lookup must equal the PSA Metric loookup</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRM_VR06_ProjectEndDateInPast</fullName>
        <active>false</active>
        <description>IQVIAPSA-3990</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
Project__r.pse__End_Date__c &lt; TODAY()
)</errorConditionFormula>
        <errorMessage>An error occurred while trying to update the record. The Project &apos;End Date&apos; is in the past. Please update the project &apos;End Date&apos; and try again</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRM_VR07_ProtocolStopDateInPast</fullName>
        <active>true</active>
        <description>IQVIAPSA-3990</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
 Project_Metric__r.Protocol_ID__r.Target__r.Stop_Date__c &lt; TODAY()
)</errorConditionFormula>
        <errorMessage>An error occurred while trying to update the record. The Protocol &apos;Stop Date&apos; is in the past. Please update the RDS Protocol ‘Stop Date’ and try again.</errorMessage>
    </validationRules>
</CustomObject>